# application/services/custom_services/apigateway/src/apicontroller/testController.ts
@@ -18,6 +18,8 @@ this.router.get('/test/get/search', this.GpSearch);
 this.router.put('/test', this.GpUpdate);
 this.router.get('/test', this.GpGetAllValues);
 this.router.post('/test', this.GpCreate);
+this.router.put('/test/get/update', this.GpSearchForUpdate);
+this.router.get('/test/:id', this.GpGetNounById);
     }
 
 public GpDelete(req: Request, res: Response) {
@@ -71,6 +73,28 @@ public GpCreate(req: Request, res: Response) {
               req.baseUrl === '/mobile' ? res.send(result) :
               req.baseUrl === '/desktop' ? res.send(result) : res.send(null)
             new CustomLogger().showLogger('info', 'Exit from testController.ts: GpCreate');
+        }).catch(err => {
+            res.send(err);
+        });
+    }
+public GpSearchForUpdate(req: Request, res: Response) {
+            new CustomLogger().showLogger('info', 'Enter into testController.ts: GpSearchForUpdate');
+        new ApiAdaptar().put(Constant.TESTURL + `${req.url}` , req.body)
+        .then((res: any) => res.response.json()).then(result => {
+              req.baseUrl === '/mobile' ? res.send(result) :
+              req.baseUrl === '/desktop' ? res.send(result) : res.send(null)
+            new CustomLogger().showLogger('info', 'Exit from testController.ts: GpSearchForUpdate');
+        }).catch(err => {
+            res.send(err);
+        });
+    }
+public GpGetNounById(req: Request, res: Response) {
+            new CustomLogger().showLogger('info', 'Enter into testController.ts: GpGetNounById');
+        new ApiAdaptar().get(Constant.TESTURL + `${req.url}` )
+        .then((res: any) => res.response.json()).then(result => {
+              req.baseUrl === '/mobile' ? res.send(result) :
+              req.baseUrl === '/desktop' ? res.send(result) : res.send(null)
+            new CustomLogger().showLogger('info', 'Exit from testController.ts: GpGetNounById');
         }).catch(err => {
             res.send(err);
         });
